<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Manage Tasks</string>


    <string name="action_sort">Sort By</string>
    <string name="action_refresh">Refresh app</string>
    <string name="sort_time">Due Time</string>
    <string name="sort_priority">Priority</string>
    <string name="sort_waiting_status">Waiting</string>
    <string name="sort_InProcess">In Process</string>
    <string name="sort_status">Status</string>
    <string name="sort_done">Done</string>
    <string name="manage_team">Manage Team</string>
    <string name="check_for_new_tasks">Check for new tasks</string>
    <string name="change_sync_time">Change sync time</string>
    <string name="about">About</string>
    <string name="app_name_menu">App Name</string>
    <string name="app_version">Version : </string>

    <string name="student_name">Student Names</string>
    <string name="Manage_Tasks">Manage Tasks</string>
    <string name="logout">Logout</string>
    <string name="parse_app_id">utQMLxMYur35Dt5ZSEkwuVgQ8LgOfyloEw70wFlQ</string>
    <string name="parse_client_id">6rhHRhdOD784fTAjHPr0XQi7FLoUUN9cWopz0Ouh</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_New">Add New Task</string>
    <string name="Add_New_USER">Add New User</string>
    <string name="Sync">Sync App</string>
    <string name="Sort">Sort by</string>
    <string name="edit">Edit Task</string>
    <string name="delete">Delete Contact</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="name">Task</string>
    <string name="dueDate">dueDate</string>
    <string name="status">Status</string>
    <string name="category">Category</string>
    <string-array name="categories_arrays" translatable="false">
        <item>General</item>
        <item>Cleaning</item>
        <item>Computers</item>
        <item>Electricity</item>
        <item>Other</item>
    </string-array>
    <string-array name="users_arrays" translatable="false">
        <item>Hila</item>
        <item>Yossi</item>
        <item>Shiran</item>
        <item>Dalia</item>
        <item>Sohei</item>
    </string-array>
    <string-array name="accept_arrays" translatable="false">
        <item>waiting</item>
        <item>rejected</item>
        <item>accept</item>
    </string-array>
    <string-array name="status_arrays" translatable="false">
        <item>Waiting</item>
        <item>In process</item>
        <item>Done</item>
    </string-array>
    <string name="normal">Normal</string>
    <string name="urgent">Urgent</string>
    <string name="low">Low</string>
    <string name="waiting">Waiting</string>
    <string name="rejected">Rejected</string>
    <string name="accepted">Accepted</string>
    <string name="waitingStatus">Waiting</string>
    <string name="inProgressStatus">In progress</string>
    <string name="done">Done</string>
    <string name="location">Location</string>
    <string name="priority">Priority</string>
    <string name="accept">Accept</string>
    <string name="assigendTo">Assigned to</string>
    <string name="save">Save Contact</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="log_in">log_in</string>
    <string name="user_phone">user phone</string>
    <string name="sign_up">Sign up</string>
    <string name="team_name">Team Name</string>
    <string name="invite_email_hint">Invite member</string>
    <string name="pick_email_label">Pick email</string>
    <string name="album_name">CameraSample</string>



    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_userphone">enter a phone</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="cannot">Cannot</string>



</resources>
