<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/signup__button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/login_button"
        android:layout_alignRight="@+id/login_button"
        android:layout_marginTop="10dp"
        android:layout_below="@id/login_button"
        android:layout_centerVertical="true"
        android:background="@drawable/blue_button"
        android:onClick="signupClicked"
        android:text="@string/sign_up"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/login_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextUserEmail"
        android:layout_alignRight="@+id/editTextUserEmail"
        android:layout_centerVertical="true"
        android:background="@drawable/blue_button"
        android:onClick="loginClicked"
        android:text="@string/log_in"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:background="@drawable/my_et_background"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPassword"
        android:layout_alignLeft="@+id/editTextPassword"
        android:layout_marginBottom="24dp"
        android:background="@drawable/my_et_background"
        android:ems="10"
        android:hint="user email"
        android:padding="5dp"
        android:textSize="20sp" />




    <TextView
        android:id="@+id/welcomeTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Welcome"
        android:textAppearance="?android:attr/textAppearanceLarge" />


</RelativeLayout>