<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".activities.DisplayTaskActivity" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/edit_manager_layout">

        <LinearLayout

            android:orientation="vertical"
            android:padding="10dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center_vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    />

                <EditText
                    android:id="@+id/editTaskName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="50dp"
                    android:ems="10"
                    android:inputType="text">
                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Category:"
                    android:layout_marginBottom="5dp"/>

                <Spinner
                    android:id="@+id/categoriesSpinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@array/categories_arrays"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:gravity="center_vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp" />

                <EditText
                    android:id="@+id/editLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="50dp"
                    android:ems="10"
                    android:inputType="text">
                </EditText>

            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Priority:" />


            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/priorityRadioButton"
                android:layout_margin="10dp"
                android:layout_marginTop="15dp">

                <RadioButton
                    android:id="@+id/normalRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/normal"
                    android:layout_marginLeft="5dp"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton
                    android:id="@+id/lowRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/low"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton
                    android:id="@+id/highRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/urgent"
                    android:layout_marginRight="5dp"
                    android:onClick="onRadioButtonClicked"
                    />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:gravity="center_vertical"
                    android:text="Time Reminder:"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/taskDateEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:hint="Pick Date"
                        />

                    <EditText
                        android:id="@+id/taskTimeEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="time"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:hint="Pick Time" >
                    </EditText>
                </LinearLayout>
            </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Assigned To:" />

                        <Spinner
                            android:id="@+id/assignedSpinners"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:prompt="@array/categories_arrays"/>
                    </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/edit_employee_layout">


                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="Task Status:"
                        android:layout_marginBottom="5dp"/>

                    <RadioGroup
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/statusRadioButton"
                        android:layout_margin="10dp">

                        <RadioButton
                            android:id="@+id/waitingStatusbutton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/waitingStatus"
                            android:layout_marginLeft="5dp"
                            android:onClick="onRadioButtonClicked"/>
                        <RadioButton
                            android:id="@+id/InProcessStatusButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/inProgressStatus"
                            android:onClick="onRadioButtonClicked"/>

                        <RadioButton
                            android:id="@+id/doneStatusButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/done"
                            android:layout_marginRight="5dp"
                            android:onClick="onRadioButtonClicked"
                            />

                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button android:text="Take Picture"
                android:id="@+id/bTakePic"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"

                />
            <ImageView
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="100dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/imageView1" />

        </LinearLayout>



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="0dp"
            android:layout_gravity="center">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Save"
                android:id="@+id/save_task_button"
                android:onClick="run"
                android:layout_gravity="right"
                />

        </RelativeLayout>
    </LinearLayout>




</ScrollView>